feat(etl): Extracting alerted party data dependent on matched tag